<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.github.jjYBdx4IL.misc</groupId>
    <artifactId>misc-aggregator</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    
    <name>Misc Aggregator</name>
    <description />
    <url>https://github.com/jjYBdx4IL/misc</url>
    <inceptionYear>2017</inceptionYear>

    <properties>
        <default.encoding>UTF-8</default.encoding>
        <project.build.sourceEncoding>${default.encoding}</project.build.sourceEncoding>
        <project.reporting.outputEncoding>${default.encoding}</project.reporting.outputEncoding>
        <maven.compiler.plugin.encoding>${default.encoding}</maven.compiler.plugin.encoding>
        <maven.compiler.source>1.9</maven.compiler.source>
        <maven.compiler.target>1.9</maven.compiler.target>
    </properties>

    <organization>
        <name>Github jjYBdx4IL Projects</name>
        <url>https://github.com/jjYBdx4IL</url>
    </organization>

    <licenses>
        <license>
            <name>The Apache Software License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <developers>
        <developer>
            <id>jjYBdx4IL</id>
            <roles>
                <role>author</role>
                <role>maven build/maven central deployment</role>
            </roles>
            <url>https://github.com/jjYBdx4IL</url>
        </developer>
    </developers>

    <issueManagement>
        <system>Github Issues</system>
        <url>https://github.com/jjYBdx4IL/misc/issues</url>
    </issueManagement>

    <scm>
        <connection>scm:git:git://github.com/jjYBdx4IL/misc.git</connection>
        <developerConnection>scm:git:ssh://git@github.com/jjYBdx4IL/misc.git</developerConnection>
        <url>https://github.com/jjYBdx4IL/misc</url>
        <tag>HEAD</tag>
    </scm>

    <modules>
        <module>cache-utils</module>
        <module>checkstyle-configurations</module>
        <module>ci-utils</module>
        <module>class-utils</module>
        <module>cli-utils</module>
        <module>clipboard-manager</module>
        <module>config-utils</module>
        <module>cms-webapp</module>
        <module>cms-it</module>
        <module>db-utils</module>
        <module>depmgmt</module>
        <module>diskcache</module>
        <module>env-utils</module>
        <module>ecs</module>
        <module>encryption-utils</module>
        <module>gfx-utils</module>
        <module>io-utils</module>
        <module>jersey-client-utils</module>
        <module>jna-utils</module>
        <module>jsoup-utils</module>
        <module>junit4-utils</module>
        <module>jutils</module>
        <module>logging-utils</module>
        <module>markdown-publisher</module>
        <module>math-utils</module>
        <module>net-utils</module>
        <module>osdapp</module>
        <module>parser</module>
        <module>proc-utils</module>
        <module>release-parent</module>
        <module>selenium-test-utils</module>
        <module>solr-webapp</module>
        <module>solr-utils</module>
        <module>swing-utils</module>
        <module>text-utils</module>
        <module>vmmgmt-utils</module>
        <module>vmmgmt-test-utils</module>
        <module>website-verifier</module>
        <module>h2-frontend</module>
        <module>xml-dom4j-utils</module>
    </modules>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <artifactId>maven-project-info-reports-plugin</artifactId>
                    <version>3.0.0</version>
                </plugin>
                <plugin>
                    <artifactId>maven-site-plugin</artifactId>
                    <version>3.7.1</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <profiles>
        <profile>
            <id>site-archive</id>
            <build>
                <plugins>
                    <plugin>
                        <artifactId>maven-site-plugin</artifactId>
                        <configuration>
                            <skip>true</skip>
                        </configuration>
                    </plugin>
                    <plugin>
                        <artifactId>maven-antrun-plugin</artifactId>
                        <version>1.8</version>
                        <executions>
                            <execution>
                                <goals>
                                    <goal>run</goal>
                                </goals>
                                <phase>compile</phase>
                                <configuration>
                                    <target>
                                        <copy todir="${project.build.directory}/site.agg" includeEmptyDirs="no"
                                            verbose="false">
                                            <fileset dir="${project.basedir}">
                                                <include name="*/target/site/com.github.*/**" />
                                            </fileset>
                                            <mapper type="regexp" from="^.*/target/site/(com\.github\..*)$$"
                                                to="\1" />
                                        </copy>
                                    </target>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <artifactId>maven-assembly-plugin</artifactId>
                        <version>3.1.1</version>
                        <executions>
                            <execution>
                                <id>assemble-site</id>
                                <phase>package</phase>
                                <goals>
                                    <goal>single</goal>
                                </goals>
                            </execution>
                        </executions>
                        <configuration>
                            <descriptors>${basedir}/bin.xml</descriptors>
                            <formats>zip</formats>
                            <attach>true</attach>
                        </configuration>
                        <inherited>false</inherited>
                    </plugin>
                </plugins>

                <pluginManagement>
                    <plugins>
                        <plugin>
                            <artifactId>maven-install-plugin</artifactId>
                            <version>3.0.0-M1</version>
                        </plugin>
                    </plugins>
                </pluginManagement>
            </build>
        </profile>
    </profiles>
</project>
